--- a/TutorialAndDevGuide/Tutorial/WellClearExample.tex
+++ b/TutorialAndDevGuide/Tutorial/WellClearExample.tex
@@ -11,3 +11,7 @@
 \item what we had to do to run on ground station. 
 \end{itemize}
 
+One application that suits well to the Copilot language is the monitoring of violations of separation criteria between two planes. We decided to implement the Well-Clear criterion as an example of practical use.
+
+\todo{Put here some WellClear stuff}.
+
