you shall not pass !

--- a/TutorialAndDevGuide/Tutorial/WellClearExample.tex
+++ b/TutorialAndDevGuide/Tutorial/WellClearExample.tex
@@ -3,7 +3,7 @@
 \todo{Here we will add a detailed description of well clear example}
 
 \begin{itemize}
-\item Intro to the probelm of monitoring aircraft
+\item Intro to the problem of monitoring aircraft
 \item Overview of concept of well clear citing papers and maybe include some of the PVS models
 \item Our monitors with description maybe we show both PVS and Copilot with explanation
 \item Properties we have proven
