--- a/TutorialAndDevGuide/Tutorial/MajVoteExample.tex
+++ b/TutorialAndDevGuide/Tutorial/MajVoteExample.tex
@@ -5,7 +5,7 @@ In this section we demonstrate how to use Haskell as an advanced macro language
 on top of Copilot by implementing an algorithm for solving the voting problem
 in Copilot.
 
-\begin{figure*}
+\begin{figure*}[!htb]
 \begin{lstlisting}[frame=none]
 majorityPure :: Eq a => [a] -> a
 majorityPure []     = error "majorityPure: empty list!"
@@ -23,7 +23,7 @@ majorityPure' (x:xs) can cnt =
 \label{fig:majority_pure}
 \end{figure*}
 
-\begin{figure*}
+\begin{figure*}[!htb]
 \begin{lstlisting}[frame=none]
 aMajorityPure :: Eq a => [a] -> a -> Bool
 aMajorityPure xs can = aMajorityPure' 0 xs can > length xs `div` 2
@@ -57,7 +57,7 @@ straightforward to implement and is shown in Figure \ref{fig:amajority_pure}.
 E.g. applying {\tt majorityPure} on the string {\tt AAACCBBCCCBCC} yields {\tt
   C}, which {\tt aMajorityPure} can confirm is in fact a majority.
 
-\begin{figure*}[ht]
+\begin{figure*}[!htb]
 \begin{lstlisting}[frame=none]
 majority :: (Eq a, Typed a) => [Stream a] -> Stream a
 majority []     = error "majority: empty list!"
@@ -76,7 +76,7 @@ majority' (x:xs) can cnt =
 \label{fig:majority}
 \end{figure*}
 
-\begin{figure*}[ht]
+\begin{figure*}[!htb]
 \begin{lstlisting}[frame=none]
 aMajority :: (Eq a, Typed a) => [Stream a] -> Stream a -> Stream Bool
 aMajority xs can = aMajority' 0 xs can > (fromIntegral (length xs) `div` 2)
