--- a/TutorialAndDevGuide/DevGuide/CompileCopilot.tex
+++ b/TutorialAndDevGuide/DevGuide/CompileCopilot.tex
@@ -2,7 +2,7 @@
 
 This section describes hot to compile the Copilot code in a Cabal sandbox.
 
-iWhat you need to do : 
+What you need to do : 
 \begin{enumerate}
 \item First install all the useful stuff : CompCert (2.4 or later, coq needed, opam recommanded), Frama-c (version sodium or later), Z3 (at least 4.3.2), CVC4 (at least 1.4), ghc 7.10 or later (and its whole toolchain, like the haskell platform).
 \subitem Optionnaly, you could install splint, an up to date gcc (5.1 or later).
