--- a/TutorialAndDevGuide/DevGuide/guide.tex
+++ b/TutorialAndDevGuide/DevGuide/guide.tex
@@ -80,7 +80,7 @@
 \newcommand{\fixme}[1]{\emph{\color{Red}\{!~#1~!\}}}
 
 \begin{document}
-i\vspace{0.1cm}
+\vspace{0.1cm}
 
 \HRule
 
@@ -151,7 +151,7 @@ lmpick@zoho.com\\
 \begin{minipage}{0.3\textwidth}
 \large
 \begin{center}
-George-Axel Jaloyan \\
+Georges-Axel Jaloyan \\
 \small{
 georges-axel.jaloyan@ens.fr\\
 }
