break out monitor proofs section

--- a/TutorialAndDevGuide/Tutorial/tutorial.tex
+++ b/TutorialAndDevGuide/Tutorial/tutorial.tex
@@ -280,6 +280,7 @@ Darafsheh, Alwyn Goodloe.
 \input{preliminaries}
 \input{Domain}
 \input{Language}
+\input{MonProofs}
 \input{Tools} 
 \input{MajVoteExample} 
 \input{LogicExample} 
