some typos and small changes

--- a/TutorialAndDevGuide/DevGuide/Core.tex
+++ b/TutorialAndDevGuide/DevGuide/Core.tex
@@ -1,7 +1,8 @@
-\section{Copilot Core}~label{sec:core}
+\section{Copilot Core}~\label{sec:core}
 
-\todo{Disciss the implemenation of Copilot Core}
-\todo{Discouss the issues surroudning GADT} 
+\todo{Discuss the implemenation of Copilot Core}
+
+\todo{Discuss the issues surroudning GADT} 
+
+
 \todo{Discuss issues we found impedded our implemenation of structs} 
-
-
