--- a/TutorialAndDevGuide/DevGuide/PrettyPrinter.tex
+++ b/TutorialAndDevGuide/DevGuide/PrettyPrinter.tex
@@ -1,5 +1,5 @@
 \section{Pretty Printer}~\label{sec:pretty}
 
-\todo{Discuss Pretty printer Implementatio}
+\todo{Discuss Pretty printer Implementation}
 
-i
+
