--- a/TutorialAndDevGuide/DevGuide/guide.tex
+++ b/TutorialAndDevGuide/DevGuide/guide.tex
@@ -4,8 +4,8 @@
 %\usepackage{2in1}
 %\usepackage{a4wide}
 %\setlength{\columnsep}{1cm}
-
-\newcommand{\todo}[1]{{\bf \Huge !!!!! #1 !!!!!}}
+\newcommand{\todo}[1]{\textcolor{blue}{[TODO: #1]}}
+%\usepackage[textsize=footnotesize]{todonotes}
 %\usepackage[british]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage{url}
