--- a/TutorialAndDevGuide/DevGuide/ACSL.tex
+++ b/TutorialAndDevGuide/DevGuide/ACSL.tex
@@ -44,3 +44,6 @@ For this purpose, three features were implemented.
 	\caption{The splitting process. The AST on the left is split into two smaller ASTs, that then generate two separate functions into two separate files, making it easier to prove the contracts for them.}
 	\label{fig:splitting label}
 \end{figure}
+
+
+TODO : explain how to prove anything.
