--- a/GAJaloyan/sample_report/ref.bib
+++ b/GAJaloyan/sample_report/ref.bib
@@ -164,3 +164,15 @@ language={English}
         month = "August",
         year = "2013"
 }
+
+@inproceedings{NMH14ATIO,
+        author = "Anthony Narkawicz and C{\'{e}}sar Mu{\~{n}}oz and George Hagen",
+        title = "An Independent and Coordinated Criterion for Kinematic Aircraft Maneuvers",
+        booktitle = "Proceedings of the 14th AIAA Aviation Technology, Integration, and Operations (ATIO) Conference",
+        number = "AIAA-2014-2859",
+        address = "Georgia, Atlanta, USA",
+        month = "June",
+        year = "2014",
+        doi= "10.2514/6.2014-2859",
+        url="http://arc.aiaa.org/doi/abs/10.2514/6.2014-2859",
+}
