--- a/GAJaloyan/conference/expose.tex
+++ b/GAJaloyan/conference/expose.tex
@@ -1014,6 +1014,16 @@ $d_{cpa} (\textbf{s},\textbf{v}) = \parallel \textbf{s} + t_{cpa}(\textbf{s}, \t
 	
 \end{frame}
 
+\begin{frame}[fragile]
+	\frametitle{Well-Clear : Making it work}
+	
+	Some little problems :
+	\begin{itemize}
+		\item The criterion work on 
+	\end{itemize}
+	
+\end{frame}
+
 
 \begin{frame}
 	\frametitle{What's next ?}
